# gentoo-portage-package-formater-haskell

./: LICENCE  README.md  gppf.cabal
src/: Main.hs  OutHandle.hs  Package.hs  Types.hs
src/Package/: Keywords.hs
src/Package/Common/: ByteString.hs  String.hs
src/Package/Types/: ByteString.hs  String.hs
src/Package/Use/: ByteString.hs  String.hs
