name:                gppf
version:             0.1.0.0
synopsis:            UnicodeSyntax executable template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/gppf#readme
license:             BSD3
license-file:        LICENCE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                        Types
  other-modules:
  build-depends:
                        base >= 4.7 && < 5,
                        base-unicode-symbols,
                        bytestring

  default-language:    Haskell2010

executable gppf
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  main-is:             Main.hs
  build-depends:        base,
                        base-unicode-symbols,
                        bytestring,
                        parsec
                     
                     
