name:                gppf
version:             0.1.0.0
synopsis:            UnicodeSyntax executable template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/gppf#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                        Package,
                        Package.Common.ByteString,
                        Package.Common.String,
                        Package.Keywords,
                        Package.Types.ByteString,
                        Package.Types.String,
                        Package.Use.ByteString,
                        Package.Use.String
  other-modules:
  build-depends:
                        base >= 4.7 && < 5,
                        base-unicode-symbols,
                        bytestring,
                        lens,
                        parsec

  default-language:    Haskell2010

executable gppf
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  main-is:             Main.hs
  build-depends:        base,
                        base-unicode-symbols,
                        bytestring,
                        lens,
                        gppf,
                        parsec


test-suite gppf-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
                        HUnit,
                        base,
                        base-unicode-symbols,
                        bytestring,
                        hspec,
                        parsec,
                        gppf
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/gentoo-portage-package-formater-haskell

